--- a/Ninteract/Ninteract.Syntax.csproj
+++ b/Ninteract/Ninteract.Syntax.csproj
@@ -39,10 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Caller.cs" />
+    <Compile Include="AssertionBuilder.cs" />
+    <Compile Include="ICallable.cs" />
     <Compile Include="CollaborationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Verifier.cs" />
+    <Compile Include="IVerifiable.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NInteract.Adapters\Ninteract.Adapters.csproj">
