--- a/Ninteract.Engine/Ninteract.Engine.csproj
+++ b/Ninteract.Engine/Ninteract.Engine.csproj
@@ -43,12 +43,16 @@
     <Compile Include="Exceptions\ExceptionThrower.cs" />
     <Compile Include="Exceptions\ExposedExceptions.cs" />
     <Compile Include="Exceptions\VerifyException.cs" />
-    <Compile Include="ICollaboratorCallParameterBuilder.cs" />
+    <Compile Include="IExpectedParameterFactory.cs" />
     <Compile Include="IDependencyContainer.cs" />
+    <Compile Include="IExpectation.cs" />
     <Compile Include="IFake.cs" />
     <Compile Include="IFakeFactory.cs" />
     <Compile Include="IParameterFactory.cs" />
+    <Compile Include="NinteractEngine.cs" />
+    <Compile Include="ParameterPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stimulus.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
