--- a/Ninteract/Ninteract.Syntax.csproj
+++ b/Ninteract/Ninteract.Syntax.csproj
@@ -42,6 +42,7 @@
     <Compile Include="AssertionBuilder.cs" />
     <Compile Include="ICallable.cs" />
     <Compile Include="CollaborationTest.cs" />
+    <Compile Include="IChainable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IVerifiable.cs" />
   </ItemGroup>
