--- a/Ninteract.Engine/Ninteract.Engine.csproj
+++ b/Ninteract.Engine/Ninteract.Engine.csproj
@@ -45,13 +45,15 @@
     <Compile Include="Exceptions\VerifyException.cs" />
     <Compile Include="IExpectedParameterFactory.cs" />
     <Compile Include="IDependencyContainer.cs" />
-    <Compile Include="IExpectation.cs" />
+    <Compile Include="ICollaboratorExpectation.cs" />
     <Compile Include="IFake.cs" />
     <Compile Include="IFakeFactory.cs" />
     <Compile Include="IParameterFactory.cs" />
+    <Compile Include="IEncompassingExpectation.cs" />
     <Compile Include="NinteractEngine.cs" />
     <Compile Include="ParameterPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnsAssumption.cs" />
     <Compile Include="Stimulus.cs" />
   </ItemGroup>
   <ItemGroup />
