--- a/Ninteract/Ninteract.Syntax.csproj
+++ b/Ninteract/Ninteract.Syntax.csproj
@@ -40,9 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssertionBuilder.cs" />
+    <Compile Include="IAssertable.cs" />
+    <Compile Include="IAssumable.cs" />
+    <Compile Include="IAssumptionSubject.cs" />
     <Compile Include="ICallable.cs" />
     <Compile Include="CollaborationTest.cs" />
-    <Compile Include="IChainable.cs" />
+    <Compile Include="IShouldChainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IVerifiable.cs" />
   </ItemGroup>
