--- a/Ninteract.Engine/Ninteract.Engine.csproj
+++ b/Ninteract.Engine/Ninteract.Engine.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnsAssumption.cs" />
     <Compile Include="Stimulus.cs" />
+    <Compile Include="ActionThrowsAssumption.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
