--- a/Ninteract.Engine/Ninteract.Engine.csproj
+++ b/Ninteract.Engine/Ninteract.Engine.csproj
@@ -43,19 +43,20 @@
     <Compile Include="Exceptions\ExceptionThrower.cs" />
     <Compile Include="Exceptions\ExposedExceptions.cs" />
     <Compile Include="Exceptions\VerifyException.cs" />
-    <Compile Include="IExpectedParameterFactory.cs" />
-    <Compile Include="IDependencyContainer.cs" />
-    <Compile Include="ICollaboratorExpectation.cs" />
-    <Compile Include="IFake.cs" />
-    <Compile Include="IFakeFactory.cs" />
-    <Compile Include="IParameterFactory.cs" />
-    <Compile Include="IEncompassingExpectation.cs" />
+    <Compile Include="ExternalBoundaries\IExpectedParameterFactory.cs" />
+    <Compile Include="ExternalBoundaries\IDependencyContainer.cs" />
+    <Compile Include="Expectations\ICollaboratorExpectation.cs" />
+    <Compile Include="ExternalBoundaries\IFake.cs" />
+    <Compile Include="ExternalBoundaries\IFakeFactory.cs" />
+    <Compile Include="ExternalBoundaries\IParameterFactory.cs" />
+    <Compile Include="Expectations\IEncompassingExpectation.cs" />
     <Compile Include="NinteractEngine.cs" />
+    <Compile Include="Exceptions\ParameterNotFoundException.cs" />
     <Compile Include="ParameterPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReturnsAssumption.cs" />
+    <Compile Include="Assumptions\ReturnsAssumption.cs" />
     <Compile Include="Stimulus.cs" />
-    <Compile Include="ThrowsAssumption.cs" />
+    <Compile Include="Assumptions\ThrowsAssumption.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
