--- a/NInteract.Tests/NInteract.Tests.csproj
+++ b/NInteract.Tests/NInteract.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Collaboration\ShouldSetTest.cs" />
     <Compile Include="Collaboration\ShouldTellTest.cs" />
     <Compile Include="Collaboration\ShouldThrowTest.cs" />
+    <Compile Include="Contract\GiveAppointmentContractTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +69,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
