added ShouldReturnSome + refactoring : extracted parameter operations to ParameterEngine

--- a/NInteract.Adapters/Ninteract.Adapters.csproj
+++ b/NInteract.Adapters/Ninteract.Adapters.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AutoFixtureDependencyContainer.cs" />
     <Compile Include="AutoFixtureParameterFactory.cs" />
+    <Compile Include="AutoMoqParameterEngine.cs" />
     <Compile Include="MoqExpectedParameterFactory.cs" />
     <Compile Include="MoqFactory.cs" />
     <Compile Include="MoqFake.cs" />
